2005-10-13  Vincent Noel  <vnoel@cox.net>

	* help/C/gnome-system-log.xml: Small tweaking.

2005-10-13  Vincent Noel <vnoel@cox.net>

	* help/C/gnome-system-log.xml: Some more updates.

2005-10-13  Vincent Noel <vnoel@cox.net>

	* help/C/gnome-system-log.xml: Update the help from
	gnome-system-log 2.4 to 2.12.

2005-10-13  Vincent Noel  <vnoel@cox.net>

	* logview.c (LoadLogMenu): String change.

2005-10-13  Vincent Noel <vnoel@cox.net>

	* log_repaint.c: (tree_path_find_row),
	(handle_selection_changed_cb):
	* logview.c: (save_session), (main):
	* logview.h: Cleanups.

2005-10-13  noel  <vnoel@cox.net>

	* log_repaint.c (iterate_thru_children): Removed. Whee !

2005-10-13  Vincent Noel  <vnoel@cox.net>

	* logview.c: (save_session), (main), (logview_count_logs): *
	misc.c: (ShowErrMessage): Correctly parse the command line option
	when started from session manager. Correctly save the opened log
	when saving the session. Fix part of bug #156507.

2005-10-13  Vincent Noel  <vnoel@cox.net>

	* logview.c: (logview_select_log), (loglist_selection_changed):
	Make sure the calendar selection works at startup too.

2005-10-13  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (handle_selection_changed_cb): When selecting a
	log line, select the associated day in the calendar. Fix bug #310110.

2005-10-13  Vincent Noel  <vnoel@cox.net>

	* logview.c (CreateMainWin): Don't put whitespace before
	colon. Fix bug #318602.

2005-10-13  Vincent Noel <vnoel@cox.net>

	* log_repaint.c: (handle_selection_changed_cb): When selecting
	lines, don't go through all the log to find matches, it's way too
	slow. Be smarter. Fix bug #318609.

2005-10-13  Vincent Noel <vnoel@cox.net>

	* logrtns.c: (CloseLog):
	* logview.c: (loglist_selection_changed), (CreateMainWin),
	(logview_calendar_set_state): Don't hide the calendar when the log
	has no dates - it makes the widgets move around. Insensitize it instead.

2005-10-13  Vincent Noel <vnoel@cox.net>
