@@ -1,3 +1,10 @@
+2005-10-14  Vincent Noel  <vnoel@cox.net>
+
+	* info.c (RepaintLogInfo): Use
+	gnome_vfs_format_file_size_for_display to show the file size.
+	* log_repaint.c (logview_update_statusbar): We have the info,
+	might as well show it in the status bar.
+
 2005-10-13  Vincent Noel  <vnoel@cox.net>
 
 	* help/C/gnome-system-log.xml: Small tweaking.
